# deepbook-lp-platform

./: API_Specification.md  DeepBook_Liquidity_Provisioning_Project_Plan.md  DeepBook_Liquidity_Provisioning_RFP_Analysis.md  Deployment_Guide.md  IMPLEMENTATION_ROADMAP.md  PROJECT_STATUS.md  Project_Summary.md  README.md  README.old.md  README_MANUS_AI.md  Smart_Contract_Design_Document.md  TECHNICAL_DOCUMENTATION.md  Technical_Documentation.md  deepbook_order_book_details.md  deepbook_sui_overview.md  deployment_summary.md  docker-compose.yml  rfp_summary.md  sui_deepbook_architecture_details.md  sui_liquidity_strategies.md  todo.md
.github/workflows/: ci.yml
backend/: Cargo.toml  Dockerfile
backend/src/: config.rs  error.rs  lib.rs
backend/src/agents/: ml_agent.rs  mod.rs  rebalancer.rs  strategy.rs
backend/src/api/: handlers.rs  mod.rs  routes.rs
backend/src/crypto/: mod.rs
backend/src/monitoring/: mod.rs
backend/src/sui/: mod.rs
backend/src/wasm/: mod.rs
backend/src/zkp/: mod.rs
backend/tests/integration/: agent_tests.rs  api_tests.rs  mod.rs  sui_tests.rs  wasm_plugin_tests.rs
contracts/deepbook_lp_accounting/: Move.toml
contracts/deepbook_lp_accounting/tests/: accounting_test.move
contracts/deepbook_lp_registry/: Move.toml
contracts/deepbook_lp_registry/tests/: registry_test.move
contracts/deepbook_lp_risk_controls/: Move.toml
contracts/deepbook_lp_risk_controls/tests/: risk_control_test.move
contracts/deepbook_lp_strategies/: Move.toml
contracts/deepbook_lp_strategies/sources/: strategy.move
contracts/deepbook_lp_strategies/tests/: strategy_test.move
contracts/deepbook_lp_vaults/: Move.toml  publish_vault_output.txt  verify_math.sh
contracts/deepbook_lp_vaults/sources/: vault.move  vault.move.verify  vault_math.move.verify
contracts/deepbook_lp_vaults/tests/: vault_test.move
contracts/manus_liquidity/: Move.toml  sui-prover.log.2025-10-11  verify.sh
contracts/manus_liquidity/sources/: vault.move  vault.move.verify  vault_math.move.verify
docs/: ARCHITECTURE.md  DEPLOYMENT.md  Lean4_AMM_Formalization_Findings.md
frontend/: Cargo.toml  index.html  style.css
frontend/src/: lib.rs
frontend/src/components/: mod.rs
frontend/src/pages/: agents.rs  funding.rs  home.rs  mod.rs  strategies.rs  technology.rs
frontend/src/utils/: api.rs  mod.rs
integration_tests/: api_tests.js  frontend_tests.js  package.json  test_suite.js
